--- a/views/patient-prescriptions.ejs
+++ b/views/patient-prescriptions.ejs
@@ -31,6 +31,7 @@
                         </li>
                     <% }); %>
                 </ul>
+                <a href="/patient/prescriptions/<%= prescription._id %>/download">Download PDF</a>
                 <hr>
             </li>
         <% }); %>
