--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -185,6 +185,7 @@
 
     <a href="/doctor/calendar" class="btn">View Calendar</a>
     <a href="/doctor/notifications" class="btn">Notifications</a>
+    <a href="/doctor/reviews/<%= doctor._id %>">View Reviews</a>
     <form action="/auth/logout" method="GET">
     <button type="submit">Logout</button>
     </form>
