--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -101,6 +101,10 @@
       <input type="text" name="name" value="<%= doctor.name %>" required>
     </div>
     <div>
+      <label>About Me:</label>
+      <textarea name="aboutMe" rows="4" cols="50" class="form-control"><%= doctor.aboutMe %></textarea>
+    </div>
+    <div>
       <label>Email:</label>
       <input type="email" name="email" value="<%= doctor.email %>" required>
     </div>
