Added route and view for Insights

--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -189,6 +189,7 @@
 
     <a href="/doctor/calendar" class="btn">View Calendar</a>
     <a href="/doctor/notifications" class="btn">Notifications</a>
+    <a href="/doctor/insights" class="btn">View Insights</a>
     <a href="/doctor/reviews/<%= doctor._id %>">View Reviews</a>
     <form action="/auth/logout" method="GET">
     <button type="submit">Logout</button>
