Added Insurances with images

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -41,12 +41,18 @@
     <p>No doctor verification requests found.</p>
   <% } %>
 
-  <a href="/admin/blogs">View Admin Blogs</a>
-  <a href="/admin/blog">Upload Admin Blog</a>
-  <a href="/admin/admin-home">Home</a>
+  <h2>Admin Functions</h2>
+  <ul>
+    <li><a href="/admin/blogs">View Admin Blogs</a></li>
+    <li><a href="/admin/blog">Upload Admin Blog</a></li>
+    <li><a href="/admin/admin-home">Home</a></li>
+    <li><a href="/admin/subscriptions">Doctor Subscription Verification Requests</a></li>
+    <li><a href="/admin/insurances">Manage Insurance Providers</a></li>
+    <li><a href="/admin/blogs-all">Search Blogs</a></li>
+  </ul>
 
-  <a href="/admin/subscriptions">Doctor Subscription Verification Requests</a>
   <a href="/auth/logout">Logout</a>
+
 
 </body>
 </html>
