--- a/views/DoctorViewBlog.ejs
+++ b/views/DoctorViewBlog.ejs
@@ -4,49 +4,137 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Details</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .main-content, .sidebar {
+            padding: 20px;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .main-content {
+            flex: 3;
+        }
+        .sidebar {
+            flex: 1;
+            padding-left: 20px;
+        }
+        .sidebar h2 {
+            font-size: 1.5em;
+            margin-top: 0;
+        }
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .sidebar li {
+            margin-bottom: 20px;
+        }
+        .sidebar img {
+            width: 80px; /* Reduced width */
+            height: auto; /* Maintains aspect ratio */
+            display: block;
+            margin-bottom: 10px;
+        }
+        .sidebar strong {
+            font-size: 1.2em;
+            display: block;
+            margin-top: 5px;
+        }
+        .sidebar p {
+            font-size: 0.9em;
+            color: #555;
+        }
+        .comments {
+            margin-top: 30px;
+        }
+        .comments ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .comments li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1><%= blog.title %></h1>
-    
-    <% if (blog.image && blog.image.data && blog.image.contentType) { %>
-        <img src="data:<%= blog.image.contentType %>;base64,<%= blog.image.data.toString('base64') %>" alt="<%= blog.title %> Image" width="200">
-    <% } else { %>
-        <p>No image available</p>
-    <% } %>
-    
-    <h2>Author Information</h2>
-    <p><strong>Author:</strong> <%= blog.author %></p>
-    <p><strong>Author Email:</strong> <%= blog.authorEmail %></p>
-    <a href="/doctor/author/<%= blog.authorId %>">View Author Info</a>
-    <h2>Description</h2>
-    <p><%= blog.description %></p>
-    <h2>Summary</h2>
-    <p><%= blog.summary %></p>
+    <div class="container">
+        <div class="main-content">
+            <h1><%= blog.title %></h1>
+            <% if (blog.image && blog.image.data && blog.image.contentType) { %>
+                <img src="data:<%= blog.image.contentType %>;base64,<%= blog.image.data.toString('base64') %>" alt="<%= blog.title %> Image" width="200">
+            <% } else { %>
+                <p>No image available</p>
+            <% } %>
+            
+            <h2>Author Information</h2>
+            <p><strong>Author:</strong> <%= blog.author %></p>
+            <p><strong>Author Email:</strong> <%= blog.authorEmail %></p>
+            <a href="/doctor/author/<%= blog.authorId %>">View Author Info</a>
+            <h2>Description</h2>
+            <p><%= blog.description %></p>
+            <h2>Summary</h2>
+            <p><%= blog.summary %></p>
 
-    <h2>Categories</h2>
-    <ul>
-        <% blog.categories.forEach(category => { %>
-            <li><%= category %></li>
-        <% }); %>
-    </ul>
+            <h2>Categories</h2>
+            <ul>
+                <% blog.categories.forEach(category => { %>
+                    <li><%= category %></li>
+                <% }); %>
+            </ul>
 
-    <h2>Hashtags</h2>
-    <ul>
-        <% blog.hashtags.forEach(hashtag => { %>
-            <li><%= hashtag %></li>
-        <% }); %>
-    </ul>
-    
-    <h2>Comments:</h2>
-    <ul>
-        <% blog.comments.forEach(comment => { %>
-            <li><strong><%= comment.username %>:</strong> <%= comment.comment %> (<%= comment.date.toLocaleString() %>)</li>
-        <% }); %>
-    </ul>
-    <form action="/doctor/blogs/comment/<%= blog._id %>" method="POST">
-        <label for="comment">Add Comment:</label>
-        <textarea name="comment" id="comment" cols="30" rows="5" required></textarea>
-        <button type="submit">Submit Comment</button>
-    </form>
+            <h2>Hashtags</h2>
+            <ul>
+                <% blog.hashtags.forEach(hashtag => { %>
+                    <li><%= hashtag %></li>
+                <% }); %>
+            </ul>
+            
+            <div class="comments">
+                <h2>Comments:</h2>
+                <ul>
+                    <% blog.comments.forEach(comment => { %>
+                        <li><strong><%= comment.username %>:</strong> <%= comment.comment %> (<%= comment.date.toLocaleString() %>)</li>
+                    <% }); %>
+                </ul>
+                <form action="/doctor/blogs/comment/<%= blog._id %>" method="POST">
+                    <label for="comment">Add Comment:</label>
+                    <textarea name="comment" id="comment" cols="30" rows="5" required></textarea>
+                    <button type="submit">Submit Comment</button>
+                </form>
+            </div>
+        </div>
+        
+        <div class="sidebar">
+            <h2>Related Posts</h2>
+            <ul>
+                <% relatedPosts.forEach(post => { %>
+                    <li>
+                        <a href="/doctor/blogs/view/<%= post._id %>">
+                            <img src="data:<%= post.image.contentType %>;base64,<%= post.image.data.toString('base64') %>" alt="<%= post.title %> image">
+                            <strong><%= post.title %></strong>
+                        </a>
+                        <p><%= post.summary %></p>
+                    </li>
+                <% }) %>
+            </ul>
+
+            <h2>Most Reads</h2>
+            <ul>
+                <% mostReadPosts.forEach(post => { %>
+                    <li>
+                        <a href="/doctor/blogs/view/<%= post._id %>">
+                            <img src="data:<%= post.image.contentType %>;base64,<%= post.image.data.toString('base64') %>" alt="<%= post.title %> image">
+                            <strong><%= post.title %></strong>
+                        </a>
+                        <p><%= post.summary %></p>
+                    </li>
+                <% }) %>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
